--- a/package.json
+++ b/package.json
@@ -7,17 +7,57 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "core-js": "^3.8.3",
+        "vue": "^2.6.14",
+        "vue-google-charts": "^0.3.3",
+        "vue-router": "^2.8.1",
+        "vuetify": "^2.6.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.16",
+        "@babel/eslint-parser": "^7.12.16",
         "@popperjs/core": "^2.10.2",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-eslint": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
+        "eslint": "^7.32.0",
+        "eslint-plugin-vue": "^8.0.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-cli-plugin-vuetify": "~2.4.8",
+        "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.6.12",
+        "vuetify-loader": "^1.7.0"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "@babel/eslint-parser"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ],
+    "dependencies": {
+        "vue-google-charts": "^0.3.3",
+        "vuetify": "^2.6.4"
     }
 }
